test/domains/sungeun/sparse/translate.good
translate.chpl:6: In function 'my_translate':
translate.chpl:7: error: translate not supported on sparse domains
